service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: python-app
spec:
  selector:
    app: python
  type: ClusterIP
  ports:
    - targetPort: 8000
      port: 8000
      protocol: TCP
