HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-route
  namespace: python-app
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway    
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: python-service
          port: 8000
